--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href=".styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>The Fearless Eater</title>
   </head>
   <body>
-    <h1>The Fearless Eater</h1>
+    <div class="container">
+      <img
+        id="backgroundImg"
+        src="./assets/pexels-photo-67468.jpeg"
+        alt="Main Restaurant Photo"
+      />
+      <h1 class="center">The Fearless Eater</h1>
+    </div>
+
+    <!-- <h2>Image Text</h2>
+
+    <p>Center text in image:</p>
+
+    <div class="container">
+      <img
+        src="./assets/pexels-photo-67468.jpeg"
+        alt="Cinque Terre"
+        width="1000"
+        height="300"
+      />
+      <div class="center">Centered</div>
+    </div> -->
+
     <script src="scripts/script.js"></script>
   </body>
 </html>
