Working on styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css" />
+    <script
+      src="https://kit.fontawesome.com/9fe2511282.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <title>The Fearless Eater</title>
   </head>
@@ -15,6 +20,8 @@
       />
       <h1 class="center">The Fearless Eater</h1>
     </div>
+
+    <navbar>NAVBAR</navbar>
 
     <!-- <h2>Image Text</h2>
 
@@ -29,6 +36,33 @@
       />
       <div class="center">Centered</div>
     </div> -->
+
+    <i class="fa-brands fa-facebook"></i>FA
+    <i class="fa-brands fa-instagram"></i>IG
+    <i class="fa-brands fa-twitter"></i>TW
+
+    <span style="font-size: 3em; color: Tomato">
+      <i class="fas fa-camera"></i>
+    </span>
+
+    <span style="font-size: 48px; color: Dodgerblue">
+      <i class="fas fa-camera"></i>
+    </span>
+
+    <span style="font-size: 3rem">
+      <span style="color: Mediumslateblue">
+        <i class="fas fa-camera"></i>
+      </span>
+    </span>
+
+    <footer>
+      LOGO
+      <div>ADDRESS</div>
+      <div>PHONE NUMBER</div>
+      <div>HOURS</div>
+      <div>ORDER ONLINE OR CALL IN</div>
+      <div>CONTACT</div>
+    </footer>
 
     <script src="scripts/script.js"></script>
   </body>
