More work on CSS and layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>The Fearless Eater</title>
   </head>
+  <div>BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
+
   <body>
     <div class="container">
       <img
@@ -20,8 +22,15 @@
       />
       <h1 class="center">The Fearless Eater</h1>
     </div>
-
-    <navbar>NAVBAR</navbar>
+    <navbar>
+      <img id="logo" src="./assets/restaurant_318-105680.png" />
+      <ul>
+        <li><a href="/">About</a></li>
+        <li><a href="/">Order Online</a></li>
+        <li><a href="/">Make a Reservation</a></li>
+        <li><a href="/">Store</a></li>
+      </ul>
+    </navbar>
 
     <!-- <h2>Image Text</h2>
 
@@ -37,29 +46,32 @@
       <div class="center">Centered</div>
     </div> -->
 
-    <i class="fa-brands fa-facebook"></i>FA
-    <i class="fa-brands fa-instagram"></i>IG
-    <i class="fa-brands fa-twitter"></i>TW
+    <div class="container">
+      <h1>MERCH</h1>
+      <div class="merchItems">Shirt</div>
+      <div class="merchItems">Mug</div>
+      <div class="merchItems">Hat</div>
+    </div>
 
-    <span style="font-size: 3em; color: Tomato">
-      <i class="fas fa-camera"></i>
-    </span>
-
-    <span style="font-size: 48px; color: Dodgerblue">
-      <i class="fas fa-camera"></i>
-    </span>
-
-    <span style="font-size: 3rem">
-      <span style="color: Mediumslateblue">
-        <i class="fas fa-camera"></i>
-      </span>
-    </span>
+    <div class="container">
+      <h1>BLOG POSTS</h1>
+      <div class="blogPosts">1</div>
+      <div class="blogPosts">2</div>
+      <div class="blogPosts">3</div>
+      <div class="blogPosts">4</div>
+    </div>
 
     <footer>
-      LOGO
-      <div>ADDRESS</div>
-      <div>PHONE NUMBER</div>
-      <div>HOURS</div>
+      <i class="fa-brands fa-facebook" style="font-size: 3em; color: white"></i>
+      <i
+        class="fa-brands fa-instagram"
+        style="font-size: 3em; color: white"
+      ></i>
+      <i class="fa-brands fa-twitter" style="font-size: 3em; color: white"></i>
+      <img id="logo" src="./assets/restaurant_318-105680.png" />
+      <div>123 Fake St. Realcity, Realstate 12345</div>
+      <div>(123) 456-7890</div>
+      <div>HOURS Monday through Friday, 12PM - 8PM <i>Closed weekends</i></div>
       <div>ORDER ONLINE OR CALL IN</div>
       <div>CONTACT</div>
     </footer>
