Working on layout and CSS

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div>BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
   <body>
-    <div class="container">
+    <div>
       <img
         id="backgroundImg"
         src="./assets/pexels-photo-67468.jpeg"
         alt="Main Restaurant Photo"
       />
-      <h1 class="center">The Fearless Eater</h1>
+      <h1 id="logoCenterText">The Fearless Eater</h1>
     </div>
     <navbar>
       <img id="logo" src="./assets/restaurant_318-105680.png" />
@@ -48,17 +48,68 @@
 
     <div class="container">
       <h1>MERCH</h1>
-      <div class="merchItems">Shirt</div>
-      <div class="merchItems">Mug</div>
-      <div class="merchItems">Hat</div>
+      <div class="merchItems">
+        <h1>Shirt</h1>
+        <img
+          src="./assets/Placeholder.png"
+          alt="Placeholder"
+          style="height: 150px; width: 150px"
+        />
+      </div>
+      <div class="merchItems">
+        <h1>Mug</h1>
+        <img
+          src="./assets/Placeholder.png"
+          alt="Placeholder"
+          style="height: 150px; width: 150px"
+        />
+      </div>
+      <div class="merchItems">
+        <h1>Hat</h1>
+        <img
+          src="./assets/Placeholder.png"
+          alt="Placeholder"
+          style="height: 150px; width: 150px"
+        />
+      </div>
     </div>
 
     <div class="container">
       <h1>BLOG POSTS</h1>
-      <div class="blogPosts">1</div>
-      <div class="blogPosts">2</div>
-      <div class="blogPosts">3</div>
-      <div class="blogPosts">4</div>
+      <div class="blogPosts">
+        <h1>Title</h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+        aperiam sequi incidunt culpa totam quia maxime. Quae, cumque, sapiente
+        repellendus nobis sed fugiat voluptates consectetur fugit dolor vel
+        incidunt recusandae a obcaecati autem eum atque hic, doloribus mollitia
+        corrupti vero.
+      </div>
+      <div class="blogPosts">
+        <h1>Title</h1>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nisi
+        beatae similique nostrum iure, tempora quam optio eveniet ipsam
+        blanditiis facilis consequatur animi delectus enim deserunt perferendis
+        voluptatum in minus.
+      </div>
+      <div class="blogPosts">
+        <h1>Title</h1>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+        maiores, facere atque accusantium corporis laborum. Modi, delectus
+        minus, unde nobis dolorem dolor, labore voluptate quod quisquam minima
+        eligendi quaerat veniam corrupti. Debitis voluptatum cumque unde nemo ad
+        dolorem consequatur. Atque fuga recusandae eum. Corporis, reprehenderit
+        excepturi porro perspiciatis dignissimos quam impedit iure provident!
+        Beatae, quos exercitationem!
+      </div>
+      <div class="blogPosts">
+        <h1>Title</h1>
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+        blanditiis ipsum eum, numquam earum totam cupiditate assumenda nobis
+        velit amet ab.
+      </div>
     </div>
 
     <footer>
@@ -69,7 +120,7 @@
       ></i>
       <i class="fa-brands fa-twitter" style="font-size: 3em; color: white"></i>
       <img id="logo" src="./assets/restaurant_318-105680.png" />
-      <div>123 Fake St. Realcity, Realstate 12345</div>
+      <div>123 Real Street Realcity, Realstate 12345</div>
       <div>(123) 456-7890</div>
       <div>HOURS Monday through Friday, 12PM - 8PM <i>Closed weekends</i></div>
       <div>ORDER ONLINE OR CALL IN</div>
