Working on contact form

--- a/index.html
+++ b/index.html
@@ -112,6 +112,52 @@
       </div>
     </div>
 
+    <div id="contact">
+      <h1>Contact</h1>
+      <div id="contactContainer">
+        <form action="action_page.php">
+          <label for="first_name">First Name</label>
+          <input
+            type="text"
+            id="first_name"
+            name="firstname"
+            placeholder="Your first name..."
+          />
+
+          <label for="last_name">Last Name</label>
+          <input
+            type="text"
+            id="last_name"
+            name="lastname"
+            placeholder="Your last name..."
+          />
+
+          <label for="email_address">Email Address</label>
+          <input
+            type="text"
+            id="email_address"
+            name="email"
+            placeholder="Your email..."
+          />
+
+          <label for="country_name">Country</label>
+          <select id="country_name" name="country">
+            <option value="usa">USA</option>
+            <option value="canada">Canada</option>
+            <option value="australia">Australia</option>
+          </select>
+
+          <label for="subject_content">Subject</label>
+          <textarea
+            id="subject_content"
+            name="subject"
+            placeholder="Your message..."
+            style="height: 100px"
+          ></textarea>
+        </form>
+      </div>
+    </div>
+
     <footer>
       <i class="fa-brands fa-facebook" style="font-size: 3em; color: white"></i>
       <i
