More work on styling and layout

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             style="height: 100px"
           ></textarea>
         </form>
+        <button class="btn">Send</button>
       </div>
     </div>
 
