More of previous

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       />
       <h1 id="logoCenterText">The Fearless Eater</h1>
     </div>
+
     <navbar>
-      <img id="logo" src="./assets/restaurant_318-105680.png" />
-      <ul>
-        <li><a href="/">About</a></li>
-        <li><a href="/">Order Online</a></li>
-        <li><a href="/">Make a Reservation</a></li>
-        <li><a href="/">Store</a></li>
-      </ul>
+      <img id="logo" src="./assets/image.png" />
+      <a href="/About">About</a>
+      <a href="/Menu">Menu</a>
+      <a href="/Order">Order Online</a>
+      <a href="/Store">Store</a>
+      <a href="#" style="float: right">Cart 🛒</a>
     </navbar>
 
     <!-- <h2>Image Text</h2>
@@ -166,7 +166,7 @@
         style="font-size: 3em; color: white"
       ></i>
       <i class="fa-brands fa-twitter" style="font-size: 3em; color: white"></i>
-      <img id="logo" src="./assets/restaurant_318-105680.png" />
+      <img id="logo" src="./assets/image.png" />
       <div>123 Real Street Realcity, Realstate 12345</div>
       <div>(123) 456-7890</div>
       <div>HOURS Monday through Friday, 12PM - 8PM <i>Closed weekends</i></div>
