Trying to implement parallax background images

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div>BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
   <body>
-    <div class="bgContainer">
+    <!-- <div class="bgContainer">
       <img src="./assets/pexels-photo-67468.jpeg" alt="Main Restaurant Photo" />
       <h1>The Fearless Eater</h1>
-    </div>
+    </div> -->
 
     <navbar>
       <!-- <img id="logo" src="./assets/image.png" /> -->
@@ -42,7 +42,13 @@
       <div class="center">Centered</div>
     </div> -->
 
-    <div class="box one">
+    <img
+      class="backgroundImgOne"
+      src="./assets/pexels-photo-67468.jpeg"
+      alt="Background image"
+    />
+
+    <div class="boxOne">
       <h1>MERCH</h1>
       <div class="merchItems">
         <h1>Shirt</h1>
@@ -73,7 +79,13 @@
       </div>
     </div>
 
-    <div class="box two">
+    <img
+      class="backgroundImgTwo"
+      src="assets\pexels-photo-687824.jpeg"
+      alt="Background image"
+    />
+
+    <div class="boxTwo">
       <h1>
         <a href="">BLOG POSTS</a>
       </h1>
@@ -112,6 +124,18 @@
         velit amet ab.
       </div>
     </div>
+
+    <img
+      class="backgroundImgThree"
+      src="assets\menu-restaurant-vintage-table.jpg"
+      alt="Background image"
+    />
+
+    <img
+      class="backgroundImgFour"
+      src="assets\pexels-photo-1267315.jpeg"
+      alt="Background image"
+    />
 
     <div id="contact">
       <div id="contactContainer">
