More work with background

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
     />
 
     <div class="boxOne">
+      <h1>Title</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aperiam
+      sequi incidunt culpa totam quia maxime. Quae, cumque, sapiente repellendus
+      nobis sed fugiat voluptates consectetur fugit dolor vel incidunt
+      recusandae a obcaecati autem eum atque hic, doloribus mollitia corrupti
+      vero.
+    </div>
+
+    <img
+      class="backgroundImgTwo"
+      src="assets\pexels-photo-687824.jpeg"
+      alt="Background image"
+    />
+
+    <div class="boxTwo">
       <h1>MERCH</h1>
       <div class="merchItems">
         <h1>Shirt</h1>
@@ -80,12 +95,12 @@
     </div>
 
     <img
-      class="backgroundImgTwo"
-      src="assets\pexels-photo-687824.jpeg"
+      class="backgroundImgThree"
+      src="assets\menu-restaurant-vintage-table.jpg"
       alt="Background image"
     />
 
-    <div class="boxTwo">
+    <div class="boxThree">
       <h1>
         <a href="">BLOG POSTS</a>
       </h1>
@@ -126,16 +141,19 @@
     </div>
 
     <img
-      class="backgroundImgThree"
-      src="assets\menu-restaurant-vintage-table.jpg"
-      alt="Background image"
-    />
-
-    <img
       class="backgroundImgFour"
       src="assets\pexels-photo-1267315.jpeg"
       alt="Background image"
     />
+
+    <div class="boxFour">
+      <h1>Title</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aperiam
+      sequi incidunt culpa totam quia maxime. Quae, cumque, sapiente repellendus
+      nobis sed fugiat voluptates consectetur fugit dolor vel incidunt
+      recusandae a obcaecati autem eum atque hic, doloribus mollitia corrupti
+      vero.
+    </div>
 
     <div id="contact">
       <div id="contactContainer">
@@ -185,6 +203,8 @@
     </div>
 
     <footer>
+      <img id="logo" src="./assets/image.png" />
+      <p>THE FEARLESS EATER. Since 1997</p>
       <i
         class="fa-brands fa-facebook"
         href=""
@@ -200,7 +220,7 @@
         href=""
         style="font-size: 2em; color: white"
       ></i>
-      <img id="logo" src="./assets/image.png" />
+
       <div>123 Real Street Realcity, Realstate 12345</div>
       <div>(123) 456-7890</div>
       <div>HOURS Monday through Friday, 12PM - 8PM <i>Closed weekends</i></div>
