--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>The Fearless Eater</title>
   </head>
-  <div>BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
+  <div class="banner">BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
   <body>
     <!-- <div class="bgContainer">
@@ -25,6 +25,7 @@
       <a href="/Menu">Menu</a>
       <a href="/Order">Order Online</a>
       <a href="/Store">Store</a>
+      <a href="/login.html">Login</a>
       <a href="#" style="float: right">Cart 🛒</a>
     </navbar>
 
