Testing login form design derived from 50 Projects in 50 Days course.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" type="text/css" href="./styles/reset.css" /> -->
     <script
@@ -11,7 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>The Fearless Eater</title>
   </head>
-  <div class="banner">BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
+  <div class="notificationBar">BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
   <body>
     <!-- <div class="bgContainer">
