Working on password generation.

--- a/login.html
+++ b/login.html
@@ -37,6 +37,8 @@
       <button class="alreadyAccount">
         Already have an account? Sign in here.
       </button>
+      <div class="passwordResult">Your password:</div>
+      <button class="btn generatePassword">Generate Password</button>
     </form>
 
     <!-- <form class="container">
