Cleaning up code. Using some templates from W3.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
   <div class="notificationBar">BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
   <body>
-    <navbar>
-      <img id="logo" src="./assets/image.png" />
-      <a href="/About">About</a>
-      <a href="/Menu">Menu</a>
-      <a href="/Order">Order Online</a>
-      <a href="/Store">Store</a>
+    <navbar style="padding: 10px">
+      <img id="logo" src="./assets/image.png" style="float: left" />
+      <a href="#About" style="float: left">About</a>
+      <a href="#Menu" style="float: left">Menu</a>
+      <a href="#Order" style="float: left">Order Online</a>
+      <a href="#Store" style="float: left">Store</a>
+      <a href="#Contact" style="float: left">Contact</a>
       <a href="#" style="float: right">Cart 🛒</a>
       <a href="/login.html" style="float: right">Login</a>
     </navbar>
 
-    <div class="banner"></div>
+    <div class="banner">
+      <p>We've recently updated our menu. Check it out!</p>
+      <button style="float: right">X</button>
+    </div>
 
-    <div class="hero-image">
-      <div class="hero-text">
+    <div class="mainImage">
+      <div class="mainText">
         <h1>The Fearless Eater</h1>
-        <p>Since 1997</p>
-        <button>Order now</button>
+        <p><i>Since 1997</i></p>
+        <a href="#Order"><button>Order Now</button></a>
       </div>
     </div>
 
