--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   </head>
   <div class="notificationBar">BANNER NOTIFICATION AT TOP WITH X BUTTON</div>
 
+  <!-- <div style="background: yellow; padding: 5px">
+    <h4 style="text-align: center">
+      Resize the browser window to see the responsive effect.
+    </h4>
+  </div> -->
+
   <body>
     <navbar style="padding: 10px">
       <img id="logo" src="./assets/image.png" style="float: left" />
