Starting express server over

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Fearless Eater</title>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
-    <!-- <link rel="stylesheet" href="styleMini.css" /> -->
+    <!-- <link rel="stylesheet" href="styles/reset.css" /> -->
+    <!-- <link rel="stylesheet" href="styles/style.css" /> -->
+    <link rel="stylesheet" href="styles/normalize.css" />
   </head>
   <body>
     <header>
