Improving dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <html data-bs-theme="dark"></html>
+    <!-- <html data-bs-theme="dark"></html> -->
     <title>The Fearless Eater</title>
   </head>
   <body>
